--- a/keynote.html
+++ b/keynote.html
@@ -11,33 +11,36 @@ keyword: environment conference, biofuels conference, desalination conference, w
 
   <p class="body">We are very happy to announce the following keynote speaker for the 9<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'19):</p>
 
-    <div class="keynotes">
+  <div class="keynotes">
     <div class="unit unit-s-1-1 unit-s-1-2 unit-m-1-2 unit-l-1-2">
       <div class="unit-spacer">
-      <a href="#Dr. Mamadou Fall">Dr. Mamadou Fall</a><br> 
+      <a href="https://engineering.uottawa.ca/civil/people/fall-mamadou" target="_blank">Dr. Mamadou Fall</a><br> 
            <p class="body">University of Ottawa, Canada</p>
       </div>
     </div>
 
-   <!--  <div class="unit unit-s-1-1 unit-s-1-2 unit-m-1-2 unit-l-1-2">
+    <div class="unit unit-s-1-1 unit-s-1-2 unit-m-1-2 unit-l-1-2">
       <div class="unit-spacer">
-      <a href="#Dr. Bernard H. Kueper">Dr. Bernard H. Kueper</a><br>
-           <p class="body">Queen’s University, Canada</p>
+      <a href="#Dr. Jamal Chaouki">Dr. Jamal Chaouki</a><br> 
+           <p class="body">École Polytechnique de Montréal, Canada</p>
       </div>
-    </div> 
-    </div> <!-- End Keynotes -->
+    </div>
 
-  <!--<span class="anchor" id="Dr. Jianbing Li"></span>
+ 
+  </div> <!-- End Keynotes -->
+
+  <span class="anchor" id="Dr. Jamal Chaouki"></span>
   <div class="keynote-info">
-  <p class="bold">Dr. Jianbing Li</p><img src="../img/Li.jpg" width="250" align="right" class="keynote-img">
-  <p class="body">Dr. Jianbing Li is a professor and professional engineer (P.Eng.) in the environmental engineering program at the University of Northern British Columbia (UNBC) in Canada. He also holds adjunct professorship at several Chinese universities. He obtained his PhD degree in environmental systems engineering from the University of Regina in 2003. His major research interests include soil and groundwater remediation, environmental pollution control, environmental modeling and risk assessment, and environmental systems analysis. His research has been supported by a number of federal, provincial and municipal funding organizations. He has supervised more than 25 graduate students (PhD and MSc.) and postdoctoral fellows and hosted more than 10 visiting scholars in his laboratory. He has published more than 180 journal and conference papers, with an h-index of 30 and one paper being listed as one of the most cited Journal of Hazardous Materials Articles. He received the UNBC Research Excellence or Achievement Award for three times, as well as the 2013 Northern BC Business and Technology Award. He also received several best paper awards from two international conferences and one international journal. He served as a guest editor for three international journals, and acted as a committee member for many international conferences. He acted as an external examiner for 7 PhD dissertations. He regularly serves as a reviewer for many international journals and conferences as well as a variety of national and international research funding organizations. </p>
+  <p class="bold">Dr. Jamal Chaouki</p><img src="../img/Chaouki.jpg" width="250" align="right" class="keynote-img">
+  <p class="body">Prof. Chaouki is full professor from 1995 at Polytechnique, Montréal. He has supervised 44 PDFs, 44PhDs and 40 Masters. He published more than 250 articles in refereed journals and more than 250 in different reviewed proceedings and more than 450 other scientific articles and edited 13 books. He has 23 patents on different processes. He is member of the Canadian Academy of Engineering. He received many awards. The last one is the R.S. Jane Memorial Award in 2018 for an exceptional achievement to the field of chemical engineering or industrial chemistry in Canada. He has co-chaired 10 International Conferences including the 8th WCCE 2009 where he has acted as technical director, he was also member of the 10th WCCE 2017 and he was the president of the Fluidization 15th Int. Conf. He is now supervising 33 researchers (15 PhDs, 8 PDFs, 5 MScA, 4 research associates and 1 researcher). He is a member of the Board of Polytechnique and several companies. He is world-renowned consultant for at least 20 national and international companies. He has created 6 start-ups with his students (the last are Pyrowave, Ecolomondo, RMTech and PyroCycle). He is Principal Chaire Holder of Total Group in hydrodynamic modeling of multiphase processes at extreme conditions. His work is mainly dedicaded to develop processes from waste, biomass and complex feedstocks to heat & power, fuels and chemicals. </p>
+  <p><a class="body-link" href=" http://pearl.polymtl.ca/" target="_blank"><strong>Visit Website</strong></a></p>
 
-  <p class="keynote-topic"><b>Topic of Keynote:</b> Petroleum Sludge Waste Treatment through Combined Processes of Ultrasonic Irradiation, Solvent Extraction and Co-pyrolysis</p>
+  <p class="keynote-topic"><b>Topic of Keynote:</b> Biomimetic Apply to Waste Recycling</p>
 
-  <a href="../paper/Keynote - Dr.Li.pdf" class="pdf"><img src="../img/pdf_icon.gif">Keynote Abstract</a>
+  <a href="../paper/Keynote - Dr.Chaouki.pdf" class="pdf"><img src="../img/pdf_icon.gif">Keynote Abstract</a>
 
   <div class="top"><a href="#top">top</a></div>
-  <div class="border"></div> -->
+  <div class="border"></div> 
   
   </div> <!-- End Keynote Info-->
 
